--- a/public/inlog_pagina/index.html
+++ b/public/inlog_pagina/index.html
@@ -14,5 +14,10 @@
       <input class="password" type="password" placeholder="Password" required>
       <button class="login-button" type="button">Login</button>
       <button class="register" type="register">Register</button>
+
+
+
+      <script src="/public/javascripts/login.js"></script>
+
 </body>
 </html>
