--- a/public/inlog_pagina/index.html
+++ b/public/inlog_pagina/index.html
@@ -1,11 +1,31 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="nl">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
+    <title>AI Lingo - Welkom!</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    test voor login
+    <div class="container">
+
+        <!-- Inlog-container -->
+        <div class="box" id="login">
+            <h2>Inloggen</h2>
+            <input type="text" placeholder="Gebruikersnaam" required><br>
+            <input type="password" placeholder="Wachtwoord" required><br>
+            <button>Inloggen</button>
+        </div>
+
+        <!-- Registreren-container -->
+        <div class="box" id="register">
+            <h2>Registreren</h2>
+            <input type="text" placeholder="Gebruikersnaam" required><br>
+            <input type="password" placeholder="Wachtwoord" required><br>
+            <input type="password" placeholder="Bevestig wachtwoord" required><br>
+            <button>Registreren</button>
+        </div>
+
+    </div>
 </body>
 </html>
