log in successful

--- a/public/inlog_pagina/index.html
+++ b/public/inlog_pagina/index.html
@@ -6,7 +6,6 @@
     <meta name="theme-color" content="#000000">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <link rel="stylesheet" href="assets/css/login.css">
     <title>Login</title>
 </head>
 <body>
@@ -17,7 +16,7 @@
 
 
 
-      <script src="/public/javascripts/login.js"></script>
+      <script src="/javascripts/login.js"></script>
 
 </body>
 </html>
