Javascript toegevoegd en interface verbeterd
28/03/2025

--- a/public/game_pagina/index.html
+++ b/public/game_pagina/index.html
@@ -8,11 +8,13 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Audiowide&family=Orbitron:wght@400..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Audiowide&family=Geo:ital@0;1&family=Orbitron:wght@400..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet"
 </head>
 <body>
 <div id="grid">
     <div id='msgBox'>LingAI!</div>
-<div id="smallMsg">Groen = juiste letter, Geel = verkeerde plaats</div>
 <div id="container">
   <div id="row1">
     <div class="square default"></div>
@@ -51,7 +53,8 @@
   </div>
     </div>
 </div>
-<input id="guess" onkeypress="submitguess(this)" placeholder='Gokje wagen?'>
+<input id="guess" maxlength="5" onkeypress="submitguess(this)" placeholder='Gokje wagen?'>
+<div id="smallMsg">Groen = juiste letter, Geel = verkeerde plaats</div>
 <button id="button" class="invisible" onClick="playagain()">Nog een potje?</button>
 
 <script src="/public/game_pagina/script.js"></script>
