--- a/public/game_pagina/index.html
+++ b/public/game_pagina/index.html
@@ -3,18 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lingai</title>
+    <title>Aingo!</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Audiowide&family=Orbitron:wght@400..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Audiowide&family=Geo:ital@0;1&family=Orbitron:wght@400..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet"
+<link href="https://fonts.googleapis.com/css2?family=Audiowide&family=Geo:ital@0;1&family=Orbitron:wght@400..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
 <div id="grid">
-    <div id='msgBox'>LingAI!</div>
+    <div id='msgBox'> <img class='logoimg' src="/public/game_pagina/assets/aingo_logo.png" alt=""></div>
 <div id="container">
   <div id="row1">
     <div class="square default"></div>
@@ -53,7 +53,7 @@
   </div>
     </div>
 </div>
-<input id="guess" maxlength="5" onkeypress="submitguess(this)" placeholder='Gokje wagen?'>
+<input id="guess" maxlength="5" onkeypress="submitguess(this)" placeholder='_ _ _ _ _'>
 <div id="smallMsg">Groen = juiste letter, Geel = verkeerde plaats</div>
 <button id="button" class="invisible" onClick="playagain()">Nog een potje?</button>
 
