Homepagine css/html af.

--- a/public/User_pagina/User.html
+++ b/public/User_pagina/User.html
@@ -10,7 +10,9 @@
     <link rel="stylesheet" href="../stylesheets/User.css">
 </head>
 <body>
+    <img src="../Pictures/aingo_logo.png" alt="Logo" id="logo">
     <div class="profielcontainer"> 
+
         <div class="woordencontainer">
             <div class="woorden10"></div>
             <div class="lingo"></div>
@@ -27,8 +29,8 @@
                 <div class="playbutton"> 
                     <p id="playtext">Play</p> 
                     <p id="mode"> Modus </p>
-                    <div class="modecirkel"></div>    
-                    <p id="vraagteken"> ? </p>
+
+
                     <p id="score"> Score 1803 </p>
                     <label for="moeilijkheid"></label>
                     <select id="moeilijkheid"> <option>Makkelijk</option> <option>Gemiddeld</option> <option>Onmogelijk</option> </select>
@@ -43,9 +45,22 @@
         <img src="../Pictures/—Pngtree—vector avatar icon_4013749.png" alt="Profielfoto" id="profielplaatje">
     </div>
 
+    <!--<div class="modecirkel">
+        <p id="vraagteken">?</p>
+    </div>
+
+    <div class="uitleg">
+        <p id="textmoeilijkheid">
+            Easy: Makkelijke woorden + niet ai gerelateerde woorden invoer.<br>     
+            <span style="color: red;">Rank multiplier 0.5x</span></p>
+        <p>Medium: Moeilijke woorden + Niet ai gerelateerde woorden invoer.<br>     
+            <span style="color: red;">Rank multiplier 1x</span></p>
+        <p>Hard: Moeilijke woorden + ai gereltaeerde woorden invoer.<br>      
+            <span style="color: red;">Rank multiplier 2x</span></p>
+    </div>-->
     
     
 
-
+    <script src="User.js"></script>
 </body>
 </html>
