--- a/public/register_pagina/index.html
+++ b/public/register_pagina/index.html
@@ -9,17 +9,19 @@
 <body>
     <div class="container">
 
-        <!-- Inlog-container -->
-        <div class="box" id="login">
-            <h2>Inloggen</h2>
+        <!-- Registreren-container -->
+        <div class="box" id="register">
+            <h2>Registreren</h2>
             <input class="username" type="text" placeholder="Username" required>
             <input class="password" type="password" placeholder="Password" required>
-            <button class="login-button" type="button">Login</button>
-            <a href="/register_pagina/index.html">
+            <input class="password2" type="password" placeholder="Bevestig wachtwoord" required><br>
+            <a href="/inlog_pagina/index.html">
+            <button class="back2login" type="button">Back to login</button>
+            </a>
             <button class="register" type="register">Register</button>
-        </a>
         </div>
     </div>
-    <script src="/javascripts/login.js"></script>
+
+    <script src="/javascripts/register.js"></script>
 </body>
 </html>
