--- a/public/inlog_pagina/indexV.html
+++ b/public/inlog_pagina/indexV.html
@@ -7,6 +7,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <title>Login</title>
+    <link rel="stylesheet" href="/stylesheets/style.css"> 
 </head>
 <body>
       <input class="username" type="username" placeholder="Username" required>
