--- a/public/register_pagina/index.html
+++ b/public/register_pagina/index.html
@@ -14,7 +14,7 @@
             <h2>Registreren</h2>
             <input class="username" type="text" placeholder="Username" required>
             <input class="password" type="password" placeholder="Password" required>
-            <input class="password2" type="password" placeholder="Bevestig wachtwoord" required><br>
+            <input class="password2" type="password" placeholder="Confirm password" required><br>
             <a href="/inlog_pagina/index.html">
             <button class="back2login" type="button">Back to login</button>
             </a>
