--- a/public/game_pagina/index.html
+++ b/public/game_pagina/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
 <div id="grid">
-    <div id='msgBox'> <img class='logoimg' src="/public/game_pagina/assets/aingo_logo.png" alt=""></div>
+    <div id='msgBox'> <img class='logoimg' src="/images/aingo_logo.png" alt=""></div>
 <div id="container">
   <div id="row1">
     <div class="square default"></div>
@@ -57,6 +57,6 @@
 <div id="smallMsg">Groen = juiste letter, Geel = verkeerde plaats</div>
 <button id="button" class="invisible" onClick="playagain()">Nog een potje?</button>
 
-<script src="/public/game_pagina/script.js"></script>
+<script src="/javascripts/script.js"></script>
 </body>
 </html>
