--- a/public/User_pagina/User.html
+++ b/public/User_pagina/User.html
@@ -7,7 +7,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>User</title>
-    <link rel="stylesheet" href="/stylesheets/User.css">
+    <link rel="stylesheet" href="../stylesheets/User.css">
 </head>
 <body>
     <img src="../Pictures/aingo_logo.png" alt="Logo" id="logo">
