--- a/public/User_pagina/User.html
+++ b/public/User_pagina/User.html
@@ -7,7 +7,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>User</title>
-    <link rel="stylesheet" href="../stylesheets/User.css">
+    <link rel="stylesheet" href="/stylesheets/User.css">
 </head>
 <body>
     <img src="../Pictures/aingo_logo.png" alt="Logo" id="logo">
@@ -26,7 +26,7 @@
                 <textarea type="text" id="pw" placeholder="Verander je wachtwoord"></textarea></div>  
                 <p id="usernametext">Gebruiker</p>
                 <p id="passwordtext">Wachtwoord</p>
-                <a href="/public/game_pagina/index.html" class="playbutton">
+                <a href="/game_pagina/index.html" class="playbutton">
                     <p id="playtext">Play</p>
 
                     <p id="mode"> Modus </p>
