--- a/public/User_pagina/User.html
+++ b/public/User_pagina/User.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="/stylesheets/User.css">
 </head>
 <body>
-    <img src="../Pictures/aingo_logo.png" alt="Logo" id="logo">
+    <img src="/images/aingo_logo.png" alt="Logo" id="logo">
     <div class="profielcontainer"> 
 
         <div class="woordencontainer">
