--- a/public/game_pagina/index.html
+++ b/public/game_pagina/index.html
@@ -57,6 +57,6 @@
 <div id="smallMsg">Groen = juiste letter, Geel = verkeerde plaats</div>
 <button id="button" class="invisible" onClick="playagain()">Nog een potje?</button>
 
-  <script src="/public/javascripts/script.js"></script>
+  <script src="/javascripts/script.js"></script>
 </body>
 </html>
