Changed input box text

--- a/public/game_pagina/index.html
+++ b/public/game_pagina/index.html
@@ -53,7 +53,7 @@
   </div>
     </div>
 </div>
-<input id="guess" maxlength="5" onkeypress="submitguess(this)" placeholder='_ _ _ _ _'>
+<input id="guess" maxlength="5" onkeypress="submitguess(this)" placeholder='Voer hier het woord in' onfocus="changeOutput()">
 <div id="smallMsg">Groen = juiste letter, Geel = verkeerde plaats</div>
 <button id="button" class="invisible" onClick="playagain()">Nog een potje?</button>
 
