Woordenlijsten geimplementeerd in de api structuur + in de game

--- a/public/game_pagina/index.html
+++ b/public/game_pagina/index.html
@@ -55,7 +55,7 @@
 </div>
 <input id="guess" maxlength="5" onkeypress="submitguess(this)" placeholder='_ _ _ _ _'>
 <div id="smallMsg">Green = correct letter, Yellow = wrong place</div>
-<button id="button" class="invisible" onClick="playagain()">Another round?</button>
+<button id="button" class="invisible" onClick="opnieuwSpelen()">Another round?</button>
 
   <script src="/javascripts/script.js"></script>
 </body>
