CSS/HTML aangepast

--- a/public/game_pagina/index.html
+++ b/public/game_pagina/index.html
@@ -54,8 +54,8 @@
     </div>
 </div>
 <input id="guess" maxlength="5" onkeypress="submitguess(this)" placeholder='_ _ _ _ _'>
-<div id="smallMsg">Groen = juiste letter, Geel = verkeerde plaats</div>
-<button id="button" class="invisible" onClick="playagain()">Nog een potje?</button>
+<div id="smallMsg">Green = correct letter, Yellow = wrong place</div>
+<button id="button" class="invisible" onClick="opnieuwSpelen()">Another round?</button>
 
   <script src="/javascripts/script.js"></script>
 </body>
