--- a/public/User_pagina/User.html
+++ b/public/User_pagina/User.html
@@ -10,6 +10,10 @@
     <link rel="stylesheet" href="/stylesheets/User.css">
 </head>
 <body>
+    <script>
+        const userId = sessionStorage.getItem('UserId');
+        console.log("Logged in user ID:", userId); //UserId terug zien in logs
+    </script>
     <img src="/images/aingo_logo.png" alt="Logo" id="logo">
     <div class="profielcontainer"> 
 
