--- a/public/inlog_pagina/index.html
+++ b/public/inlog_pagina/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AI Lingo - Welkom!</title>
-    <link rel="stylesheet" href="/stylesheets/style.css">
+    <link rel="stylesheet" href="/stylesheets/style_.css">
 </head>
 <body>
     <div class="container">
