uitlegbox toegevoegd html css

--- a/public/game_pagina/index.html
+++ b/public/game_pagina/index.html
@@ -52,6 +52,9 @@
     <div class="square default"></div>
   </div>
     </div>
+    <div class="uitleg">
+      <p id="uitlegtekst">test</p>
+    </div>
 </div>
 <input id="guess" maxlength="5" onkeypress="submitguess(this)" placeholder='_ _ _ _ _'>
 <div id="smallMsg">Green = correct letter, Yellow = wrong place</div>
