--- a/public/User_pagina/User.html
+++ b/public/User_pagina/User.html
@@ -16,9 +16,8 @@
         <div class="woordencontainer">
             <div class="woorden10"></div>
             <div class="lingo"></div>
-            <p id="woordengeraden"> Woorden geraden   :1 </p>
-            <p id="laatste10"> Woorden laatste 10 dagen </p>
-            <p id="lingo1"> Lingo </p>        
+            <p id="woordengeraden">Correct guessed words: </p>
+            <p id="laatste10">Last 10 guessed words</p>       
          </div>  
         <div class="username">
             <textarea type="text" id="user" placeholder="Change username"></textarea></div>  
