--- a/public/game_pagina/index.html
+++ b/public/game_pagina/index.html
@@ -70,6 +70,7 @@
     <img src="/images/avatar_icon.png" alt="Profielfoto" id="profielplaatje">
   </a>
 </div>
+<div class="test"></div>
   <script src="/javascripts/script.js"></script>
 </body>
 </html>
