--- a/public/User_pagina/User.html
+++ b/public/User_pagina/User.html
@@ -20,9 +20,10 @@
             <p id="laatste10">Last 10 guessed words</p>       
          </div>  
         <div class="username">
-            <textarea type="text" id="user" placeholder="Change username"></textarea></div>  
+            <textarea type="text" id="user" placeholder="Change username"></textarea>
+        </div>  
             <div class="password">
-                <textarea type="text" id="pw" placeholder="Change password"></textarea></div>  
+                <textarea type="text" id="pw" placeholder="********"></textarea></div>  
                 <p id="usernametext">Username</p>
                 <p id="passwordtext">Password</p>
                 <a href="/game_pagina/index.html" class="playbutton">
