--- a/public/User_pagina/User.html
+++ b/public/User_pagina/User.html
@@ -25,7 +25,7 @@
             <div class="password">
                 <textarea type="text" id="pw" placeholder="********"></textarea></div>  
                 <p id="usernametext">Username</p>
-                <p id="passwordtext">Password</p>
+                <p id="passwordtext">Password Change</p>
                 <a href="/game_pagina/index.html" class="playbutton">
                     <p id="playtext">Play</p>
                     </a>
